# projet-blue

./: LAYOUT-PROJ-00A0.dts  README.md  autovoit.launch
BBcfg/: interfaces  interfaces~
ahrs/: CMakeLists.txt  package.xml
ahrs/include/ahrs/: ahrs.hpp
ahrs/src/: ahrs.cpp
init/: chipsFinder.py  init.sh
init/pwmcfg/: ecap.cfg  ehrpwm.cfg
pwmServo/: package.xml
pwmServo/src/: pwmServo.cpp
src/ahrs/: CMakeLists.txt  package.xml
src/ahrs/include/ahrs/: razorAHRS.h
src/ahrs/src/: ahrsProc.cpp  razorAHRS.cpp
src/imu/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/imu/msg/: YPR.msg
src/imu/script/: imu_node.py
src/mission/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/mission/include/mission/: mission.hpp  mission_node.hpp
src/mission/src/: mission.cpp  mission_node.cpp
src/pwmLib/: CMakeLists.txt  package.xml
src/pwmLib/include/pwmLib/: pwmLib.h
src/pwmLib/src/: pwmLib.cpp
src/pwmServo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/pwmServo/src/: pwmServo.cpp
src/regulateur/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/regulateur/msg/: debugreg.msg  reg.msg
src/regulateur/src/: main.cpp  regulateur.cpp  regulateur_node.cpp  regulateur_node.cpp~
src/selecteur/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/selecteur/src/: selecteur_node.cpp
test2/: CMakeLists.txt  package.xml
test2/include/test2/: boost_test.hpp
test2/src/: boost_test.cpp
tp_pierre/: CMakeLists.txt  package.xml
tp_pierre/include/tp_pierre/: tp_pierre.hpp
tp_pierre/src/: tp_pierre.cpp
(+5 files in other folders)
